kubernetes/auth/otus-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-auth-deployment
  namespace: default
  labels:
    app: otus-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-auth
  template:
    metadata:
      labels:
        app: otus-auth
    spec:
      containers:
        - name: otus-auth
          image: escadockerhub/otus.auth:1.2
          ports:
            - containerPort: 8010
              name: web
          livenessProbe:
            httpGet:
              port: 8010
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              port: 8010
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: otus-auth-service
  labels:
    app: otus-auth
spec:
  selector:
    app: otus-auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web
